--- a/Exercícios/ex002/index.html
+++ b/Exercícios/ex002/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="localizacao.ico" type="imagem/x-icon">
     <title>PI - 2</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,7 +20,10 @@
 
     </header>
     <main>
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/11/e6/80/f0/catarata-arco-iris.jpg" class="pequena" alt="imagem da net livre">
+       <div id="imagi"></div>
+       <div class="pequena" id="Pfc1"></div>
+       <div class="pequena" id="Pfc2"></div>
+
         <h2>Mensagem na caixa da imagem</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi incidunt illo delectus, ratione aliquam iste officia dolore similique deserunt quis necessitatibus eum dolor placeat pariatur at libero expedita nihil fugiat? ipsum dolor, sit amet consectetur adipisicing elit. Minus dicta numquam tempore minima non quae sapiente nam maxime similique asperiores cumque, ipsam accusantium suscipit alias ipsa tempora aut voluptate enim? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem error aut quas expedita officiis ex est sunt dolor, deleniti quis quisquam distinctio incidunt provident libero doloremque optio voluptas, dolore voluptatem.</p>
     </main>
@@ -42,6 +46,14 @@
     <article>
         <p class="comentarios3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis debitis, voluptas sit veniam, iure voluptate p!</p>
     </article>
+    <div class="fotos" id="fot1">
+    </div>
+
+    <div class="fotos" id="fot2">
+    </div>
+
+    <div class="fotos" id="fot3">
+    </div>
 
     <footer>
         <p>@Feito por Evelim Sem Coração...</p>
