--- a/Exercícios/ex003/index.html
+++ b/Exercícios/ex003/index.html
@@ -8,23 +8,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
     <header>
         <h1>Tentativa 3 socorro</h1>
     </header>
 
-    <div id="principal">
-        <div id="img1"></div>
-        <div id="img2"></div>
-        <div id="img3"></div>
-    </div>
-<main>
-    <div id="perfil"></div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, nulla. Nulla laborum voluptate numquam consectetur! Nostrum quo voluptate autem dolorem. Laborum molestias illum doloremque nesciunt voluptatem beatae numquam aperiam deserunt.</p>
-</main>
+    <div class="foto1" id="fotomaior"></div>
+    <div class="foto2" id="fotomenor1"></div>
+    <div class="foto3" id="fotomenor2"></div>
+ 
+    <div class="foto" id="perfil1"></div>
+
+    <p id="descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, nulla. Nulla laborum voluptate numquam consectetur! Nostrum quo voluptate autem dolorem. Laborum molestias illum doloremque nesciunt voluptatem beatae numquam aperiam deserunt.</p>
+
  <h2 id="comentario">Comentarios <a href="#">link</a></h2>
  <p id="comentario">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus odio dolore molestiae unde numquam distinctio quam sint nihil cum eum incidunt mollitia tempora at aspernatur, esse quis excepturi, tenetur quo.</p>
- <h2 id="
- publicar">Publicar</h2>
+
+ <h2 id="publicar">Publicar</h2>
 
  <hr>
 
