--- a/Exercícios/ex006/ex006.html
+++ b/Exercícios/ex006/ex006.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>      div#area{
-           background: green;
-           color: rgb(221, 221, 238);
-           font: normal 20pt arial;
-           width: 200px;
-           height: 200px;
-           line-height: 200px;
-           text-align: center;
-       }
-    </style>
+    <title>interajir com mouse</title>
+    <link rel="stylesheet" href="ex006.css">
+
 </head>
 <body>
-    <div id="area">interaja</div>
+    <div id="area">interaja...</div>
+
+    <script src="ex006.js"></script>
 </body>
 </html>
