interação com mouse

--- a/Exercícios/ex006/ex006.html
+++ b/Exercícios/ex006/ex006.html
@@ -9,7 +9,8 @@
 
 </head>
 <body>
-    <div id="area">interaja...</div>
+    <div id="area">interaja...
+    </div>
 
     <script src="ex006.js"></script>
 </body>
