atualizações na web tour

--- a/Exercícios/ex002/index.html
+++ b/Exercícios/ex002/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Tentativa 2 - PI KKKK - New rsrsr</h1>
+        <h1>Tour Am</h1>
         <nav>
             <a href="#">Fotografia</a>
             <a href="#">Curiosidade</a>
@@ -21,29 +21,33 @@
     </header>
     <main>
        <div id="imagi"></div>
-       <div class="pequena" id="Pfc1"></div>
-       <div class="pequena" id="Pfc2"></div>
 
         <h2>Mensagem na caixa da imagem</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi incidunt illo delectus, ratione aliquam iste officia dolore similique deserunt quis necessitatibus eum dolor placeat pariatur at libero expedita nihil fugiat? ipsum dolor, sit amet consectetur adipisicing elit. Minus dicta numquam tempore minima non quae sapiente nam maxime similique asperiores cumque, ipsam accusantium suscipit alias ipsa tempora aut voluptate enim? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem error aut quas expedita officiis ex est sunt dolor, deleniti quis quisquam distinctio incidunt provident libero doloremque optio voluptas, dolore voluptatem.</p>
     </main>
 
-    <article>
+    <div id="Pfc1"></div>
+    <div id="Pfc2"></div>
+
+    <article id="comen">
     <h2 id="clique">Clique aqui para comentar <a href="#">link</a></h2>
         <p id="comentario">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem laborum at quos labore,<strong>vai levar para uma outra pagina</strong> recusandae hic suscipit deleniti, repudiandae perferendis natus est placeat dignissimos, modi optio soluta mollitia ea eius rem.</p>
         <h2 id="publicar">Publicar</h2>
     </article>
 
         <article>
-            <b>Paulo</b>
+        <b class="nomes">Paulo</b>
         <p class="comentarios1"> 
          ola bla bla bla bla bla sim</p>
         </article>
+
         <article>
+        <b class="nomes">Paulo2</b>
         <p class="comentarios2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab temporibus eveniet eum velit recusandae soluta! Recusandae mollitia.</p>
-    </article>
+        </article>
 
     <article>
+        <b class="nomes">Paulo3</b>
         <p class="comentarios3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis debitis, voluptas sit veniam, iure voluptate p!</p>
     </article>
     <div class="fotos" id="fot1">
@@ -55,8 +59,16 @@
     <div class="fotos" id="fot3">
     </div>
 
+    <div class="fotos" id="fot4">
+    </div>
+
+    <div class="fotos" id="fot5">
+    </div>
+
+    <div class="fotos" id="fot6"><p></p>
+    </div>
     <footer>
-        <p>@Feito por Evelim Sem Coração...</p>
+        <p>@Feito por Evelim, Alinne, Arielly...</p>
     </footer>
 </body>
 </html>
