--- a/Exercícios/ex002/index.html
+++ b/Exercícios/ex002/index.html
@@ -10,12 +10,14 @@
 </head>
 <body>
     <header>
+        <div id="op"><img src="mais.png" alt="mais"></div>
+        <div id="logo"><img src="logo.png" alt="logoooo"></div>
         <h1>Tour Am</h1>
         <nav>
-            <a href="#">Fotografia</a>
-            <a href="#">Curiosidade</a>
-            <a href="#">Sobre</a>
-            <a href="#">Seja um Anfitrião</a>
+            <a href="fotografias.index.html">Fotografia</a>
+            <a href="curiosidades.index.html">Curiosidade</a>
+            <a href="sobre.index.html">Sobre</a>
+            <a href="sejaanfitrião.index.html">Seja um Anfitrião</a>
         </nav>
 
     </header>
@@ -30,8 +32,8 @@
     <div id="Pfc2"></div>
 
     <article id="comen">
-    <h2 id="clique">Clique aqui para comentar <a href="#">link</a></h2>
-        <p id="comentario">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem laborum at quos labore,<strong>vai levar para uma outra pagina</strong> recusandae hic suscipit deleniti, repudiandae perferendis natus est placeat dignissimos, modi optio soluta mollitia ea eius rem.</p>
+    <h2 id="clique">Comentarios</h2>
+        <p id="comentario">Escreva seu comentario</p>
         <h2 id="publicar">Publicar</h2>
     </article>
 
