--- a/Exercícios/projeto/home.html
+++ b/Exercícios/projeto/home.html
@@ -48,27 +48,54 @@
         </div>
         <div class="row">
             <div class="col">
-                <img src="./img/Natureza_-_Praia_de_Icaraí_-_Niterói_-_Brasil.png" alt="">
+                <img src="./img/free-cidadeceu.jpg" alt="">
                 <h4>Camp Trek</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi esse distinctio illum mini</p>
                 <a href="#" class="ctn">Learn More</a>
             </div>
             <div class="col">
-                <img src="./img/campp.png" alt="">
+                <img src="./img/free-estádio.jpg" alt="">
                 <h4>Holiday</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi esse distinctio illum ?</p>
                 <a href="#" class="ctn">Learn More</a>
             </div>
         </div>
     </section>
-    <select class="explore">
+
+    <section class="explore">
         <div class="explore-content">
         <h1>EXPLORE O MUNDO</h1>
-        <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci eaque voluptatem accusamus, teneturmilique rerum. Magnam mollitia nihil commodi libero nesciunt eveniet?
-        </P>
+        <div class="line"></div>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci eaque voluptatem accusamus, teneturmilique rerum. Magnam mollitia nihil commodi libero nesciunt eveniet?
+        </p>
         <a href="#" class="ctn">Learn More</a>
        </div>
-    </select>
+    </section>
+
+    <section class="tours">
+        <div class="row">
+            <div class="col content-col">
+                <h1>UPCOMING TOURS & DESTINATION</h1>
+                <div class="line"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui dignissimos unde ullam natus accusantium nesciunt beatae repellendus iste quam explicabo, dolor fuga dolores sed, numquam ad odio delectus nam. Asperiores!</p>
+                <a href="#" class="ctn">Learn More</a>
+            </div>
+            <div class="col image-col">
+                <div class="image-gallery">
+                    <img src="./img/free-papagaios.jpg" alt="">
+                    <img src="./img/free-cidadeceu.jpg" alt="">
+                    <img src="./img/free-sp.jpg" alt="">
+                    <img src="./img/free-estádio.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer">
+        <p>123 Brasil, 2023, Manaus-Am | Fone: 92992990075 |
+            Email: aventurase@gmail.com</p>
+        <p>Copyright @ 2023 Outdoor Adventure</p>
+    </section>
     
 </body>
 </html>
