--- a/Exercícios/projeto/home.html
+++ b/Exercícios/projeto/home.html
@@ -12,7 +12,8 @@
     <nav class="navbar">
         <h1 class="logo">AVENTURA-SE</h1>
         <ul class="nav-links">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active">
+                <a href="#">Home</a></li>
             <li><a href="#">Tours</a></li>
             <li><a href="#">Explore</a></li>
             <li><a href="#">About</a></li>
